@@ -1,5 +1,16 @@
 2007-12-28  Eric S. Raymond  <esr@snark.thyrsus.com>
 
+	* vc-hooks.el, vc.el: Move vc-directory-exclusion-list from vc.el
+	to vc-hooks.el so it will be available to other modes, such as
+	speedbar.el.  Also, teach it to recognize monotine state directories.
+
+	* speedbar.el: Remove this mode's fragile assumptions about
+	version-control systems.  Instead, make it use logic from
+	vc-hooks.el so it will become smarter whenever VC mode does.
+
+	* vc-hooks.el: 'added is a real state, not a future hypothetical
+	one. Fix the documentation.
+
 	* vc-bzr.el, vc-cvs.el, vc-git.el, vc-hg.el, vc-mcvs.el, vc-svn.el:
 	Modify all instances of the dir-state back-end method to suppress
 	keeping undo lists on the buffers holding astatus output, which
